# jnicanvas

./: README.md
MultiD/: .gitignore  configure.ac
dev/prj/nbproject/: configurations.xml  project.xml
dev/prj/nbproject/private/: Default.properties  configurations.xml
dev/src/main/c++/core/: Interface.txt  main.cc  makefile  rpn  rpn.in
dev/src/main/c++/core/control/: CmdlineUI.cc  CmdlineUI.h  Command.cc  Command.h  Control.cc  Control.h  Dispatcher.cc  Dispatcher.h  RPnDispatcher.h  UI.cc  UI.h  XmlUI.cc  XmlUI.h
dev/src/main/c++/core/control/rapidxml-1.13/: manual_tutotial
dev/src/main/c++/core/datamodel/: BoolParameter.cc  BoolParameter.h  FloatParameter.cc  FloatParameter.h  IntParameter.cc  IntParameter.h  StringParameter.cc  StringParameter.h  datamodel
dev/src/main/c++/core/nbproject/: configurations.xml  project.xml
dev/src/main/c++/core/numeric/: OneCurve.cc  OneCurve.h  OneFluxFunction.h  Physics.cc
dev/src/main/c++/core/numeric/rpnumerics/: Bifurcation_Curve.cc_  Bifurcation_Curve.h_  CompositeCurve.cc_  CompositeCurve.h_  CompositeFlow.cc_  CompositeFlow.h_  ContinuationRarefactionFlow.cc_  ContinuationRarefactionFlow.h_  ContinuationShockFlow.cc_  ContinuationShockFlow.h_  Extension_Curve.cc_working_  Extension_Curve.h_working_  Integral_Curve.cc_  Integral_Curve.h_  Rarefaction.cc_  Rarefaction.h_  RarefactionCurve.cc_  RarefactionCurve.h_  RarefactionFlow.cc_  RarefactionFlow.h_  Rarefaction_Extension.cc_  Rarefaction_Extension.h_  RiemannSolver.cc_  Shock.h  ShockFlow.cc_  ShockFlow.h_  WaveCurve.cc_  WaveCurve.h_  WaveFlow.cc_  WaveFlow.h_
dev/src/main/c++/core/numeric/saved_with_addToGui/: OneCurve.cc  OneFluxFunction.cc  Physics.cc
dev/src/main/c++/core/numerics/: OneFluxFunction.cc  Physics.h
dev/src/main/c++/core/numerics/Model/: SubPhysics.h
dev/src/main/c++/core/numerics/rpnumerics/: .directory  Extension_Curve.cc  Shock.cc
dev/src/main/c++/core/presentation/: AuxMethodSettings.cc  AuxMethodSettings.h  BoolProfile.cc  BoolProfile.h  BoolSettings.cc  BoolSettings.h  CalcMethodSettings.cc  CalcMethodSettings.h  Configurable.cc  Configurable.h  FloatProfile.cc  FloatProfile.h  FloatSettings.cc  FloatSettings.h  IntProfile.cc  IntProfile.h  IntSettings.cc  IntSettings.h  MacroCalcMethod.cc  MacroCalcMethod.h  MacroMethod.cc  MacroMethod.h  PhysicsSettings.cc  PhysicsSettings.h  Profile.cc  Profile.h  ProfileSettings.cc  ProfileSettings.h  Settings.cc  Settings.h  SettingsType.h  StringProfile.cc  StringProfile.h  StringSettings.cc  StringSettings.h  UISpec.cc  UISpec.h  presentation
dev/src/main/c++/core/profile/: Layout.cc  Layout.h  TestPhysicsProfile.cc  TestPhysicsProfile.h
dev/src/main/c++/util/rapidxml-1.13/: main.cc  rapidxml.hpp  rapidxml_print.hpp  xml
dev/src/main/c++/wave/util/: Boundary.cc_old  Boundary.h  HyperOctree.h_  IsoTriang2DBoundary.cc  IsoTriang2DBoundary.cc_new  IsoTriang2DBoundary.h_new  JetMatrix.cc_  JetMatrix.h_
dev/src/main/java/rpn/control/: RPnDispatcher.java
tests/TestJNICanvas/: JNICanvas.h  JNICanvas.java  TestJNICanvas.java  TestUI.java  TestUIFrame.java  libJNICanvas.cc  libJNICanvas.h  make.sh
tests/TestJNICanvas/JNICanvas/: JNICanvas.h  JNICanvas.java  TestUI.java  TestUIFrame.java  libJNICanvas.cc  libJNICanvas.h
tests/TestPlotter/: Graphics.h  Graphics2DOpenGL.cpp  Graphics2DOpenGL.h  TestCanvas.h  TestCanvas.java  TestPlotter.java  TestUI.java  TestUIFrame.java  libPaint.cc  make.sh
tests/awt_ni/: MyCanvas.java  libPaint.cc  make.sh
tests/guiJava/: Choice.java  PanelChoice.java  Space2d.java  Space2dModesChoice.java
tests/guiJava/t_guiJava/: Space2dModesChoice.java  Space2dSettingsButton.java
(+227 files in other folders)
